Migrated from JCommander to picocli for cmftool command lines Some code hardening