@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.javatuples:javatuples:1.2'
 
     testImplementation libs.junit.jupiter
+    testImplementation 'org.mockito:mockito-core:5.12.0'
     testImplementation 'org.assertj:assertj-core:3.26.0'
     testImplementation 'io.github.hakky54:logcaptor:2.9.3'  
     testImplementation 'com.jayway.jsonpath:json-path:3.0.0'
@@ -52,4 +53,5 @@ tasks.processResources {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
